# liblatte

./: CMakeLists.txt  README.md  install.sh
src/: CMakeLists.txt  latte.cpp  latte.h
